--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 <link rel="stylesheet" href="/css/utils/toastify.css">
 <link rel="stylesheet" href="/css/store/spec.css">
+<link rel="stylesheet" href="/css/utils/ratingTooltip.css">
 
 <!-- SECTION -->
 <div class="section">
@@ -427,6 +428,34 @@
 										<del class="product-old-price">$<%= Number(product.price / (1 - product.discount / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
 									<% } %>
                                     </h4></a>
+									<div class="product-rating clickable-rating" data-product-id="<%= product.id %>">
+                                        <% for (let i = 1; i <= 5; i++) { %>
+                                            <% if (i <= Math.floor(product.averageRating)) { %>
+                                                <i class="fa-solid fa-star"></i>
+                                            <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
+                                                <i class="fa-regular fa-star-half-stroke"></i>
+                                            <% } else { %>
+                                                <i class="fa-regular fa-star"></i>
+                                            <% } %>
+                                        <% } %>
+                                        <div class="rating-tooltip"></div>
+                                    </div>
+
+                                    <div class="product-btns">
+                                        <button class="add-to-wishlist" 
+                                                data-product-id="<%= product.id %>" 
+                                                data-product-color="<%= product.color %>">
+                                            <i class="fa-regular fa-heart"></i>  
+                                            <span class="tooltipp">Favoritos</span>
+                                        </button>
+
+                                        <% if (product.itsMobile) { %>
+                                            <button class="add-to-compare" data-id="<%= product.id %>">
+                                                <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                                                <span class="tooltipp">Comparar</span>
+                                            </button>
+                                        <% } %>
+                                    </div>
 								</div>
 							</div>
 						</div>
