--- a/public/css/store/about.css
+++ b/public/css/store/about.css
@@ -96,7 +96,7 @@ body, html {
 
 .icono-servicio:hover {
     color: #D10024;
-    background-color: #e0e0e0; 
+    background-color: #15161D; 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
