--- a/src/views/store/cart.ejs
+++ b/src/views/store/cart.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="/css/store/cart.css">
+    <link rel="stylesheet" href="/css/utils/ratingTooltip.css">
     <link rel="stylesheet" href="/css/utils/sweetalert2.css">
 </head>
 
@@ -91,6 +92,35 @@
 										<del class="product-old-price">$<%= Number(product.price / (1 - product.discount / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></del>
 									<% } %>
                                     </h4></a>
+
+                                    <div class="product-rating clickable-rating" data-product-id="<%= product.id %>">
+                                        <% for (let i = 1; i <= 5; i++) { %>
+                                            <% if (i <= Math.floor(product.averageRating)) { %>
+                                                <i class="fa-solid fa-star"></i>
+                                            <% } else if (i - product.averageRating < 1 && i > product.averageRating) { %>
+                                                <i class="fa-regular fa-star-half-stroke"></i>
+                                            <% } else { %>
+                                                <i class="fa-regular fa-star"></i>
+                                            <% } %>
+                                        <% } %>
+                                        <div class="rating-tooltip"></div>
+                                    </div>
+
+                                    <div class="product-btns">
+                                        <button class="add-to-wishlist" 
+                                                data-product-id="<%= product.id %>" 
+                                                data-product-color="<%= product.color %>">
+                                            <i class="fa-regular fa-heart"></i>  
+                                            <span class="tooltipp">Favoritos</span>
+                                        </button>
+
+                                        <% if (product.itsMobile) { %>
+                                            <button class="add-to-compare" data-id="<%= product.id %>">
+                                                <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                                                <span class="tooltipp">Comparar</span>
+                                            </button>
+                                        <% } %>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -107,6 +137,9 @@
 
     <%- include('../partials/footer.ejs') %>
 
+    <script src="/js/utils/ratingTab.js" type="module"></script>
+    <script src="/js/utils/ratingTooltip.js" type="module"></script>
+    <script src="/js/utils/buttonComparison.js"></script>
     <script src="/js/store/cart/cartView.js" type="module"></script>
     <script src="/js/store/cart/cart.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
