--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -380,7 +380,7 @@ document.querySelector(".tablink").click();
         <!-- /row -->
     </div>
     <!-- /container -->
-</div><br><br>
+</div>
 <!-- /SECTION -->
 
 <!-- SECTION -->
