--- a/public/css/libs/style.css
+++ b/public/css/libs/style.css
@@ -1270,7 +1270,7 @@ textarea.input {
 .product-widget .product-img>img {
   object-fit: cover;
   display: block;
-  width: 100px;
+  width: 100%;
   height: 80px;
   margin: 0 auto;
 }
