--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -435,6 +435,208 @@ document.querySelector(".tablink").click();
 </div>
 <!-- /SECTION -->
 
+<!-- SECTION -->
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-xs-6">
+                <div class="section-title">
+                    <h4 class="title">Los Más Vendidos</h4>
+                    <div class="section-nav">
+                        <div id="slick-nav-3" class="products-slick-nav"></div>
+                    </div>
+                </div>
+
+                <div class="products-widget-slick" data-nav="#slick-nav-3">
+                    <div>
+                        <% for(let i = 0; i < Math.min(3, topSelling.length); i++) { %>
+                            <% const product = topSelling[i]; %>
+                            <div class="product-widget">
+                                 <a href="/product/<%= product.id %>">
+                                <div class="product-img">
+                                    <img src="<%= product.image %>" alt="<%= product.name %>">
+                                </div></a>
+                                <div class="product-body">
+                                    <p class="product-category"><%= product.category %></p>
+                                    <h3 class="product-name">
+                                        <%= product.name %> <%= product.specs %>
+                                    </h3>
+                                    <h4 class="product-price">
+                                        $<%= Number(product.price).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                        <% if (product.discount > 0) { %>
+                                            <del class="product-old-price">
+                                                $<%= Number(product.price / (1 - product.discount / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                            </del>
+                                        <% } %>
+                                    </h4>
+                                </div>
+                            </div>
+                        <% } %>
+                    </div>
+
+                    <% if (topSelling.length >= 3) { %>
+                    <div>
+                        <% for(let i = 3; i < Math.min(6, topSelling.length); i++) { %>
+                            <% const product = topSelling[i]; %>
+                            <div class="product-widget">
+                                 <a href="/product/<%= product.id %>">
+                                <div class="product-img">
+                                    <img src="<%= product.image %>" alt="<%= product.name %>">
+                                </div></a>
+                                <div class="product-body">
+                                    <p class="product-category"><%= product.category %></p>
+                                    <h3 class="product-name">
+                                        <%= product.name %> <%= product.specs %>
+                                    </h3>
+                                    <h4 class="product-price">
+                                        $<%= Number(product.price).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                        <% if (product.discount > 0) { %>
+                                            <del class="product-old-price">
+                                                $<%= Number(product.price / (1 - product.discount / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                            </del>
+                                        <% } %>
+                                    </h4>
+                                </div>
+                            </div>
+                        <% } %>
+                    </div>
+                    <% } %>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-xs-6">
+                <div class="section-title">
+                    <h4 class="title">Los Más Vendidos</h4> 
+                    <div class="section-nav">
+                        <div id="slick-nav-4" class="products-slick-nav"></div>
+                    </div>
+                </div>
+                <div class="products-widget-slick" data-nav="#slick-nav-4">
+                    <div>
+                        <% for(let i = 6; i < Math.min(9, topSelling.length); i++) { %>
+                            <% const product = topSelling[i]; %>
+                            <div class="product-widget">
+                                 <a href="/product/<%= product.id %>">
+                                <div class="product-img">
+                                    <img src="<%= product.image %>" alt="<%= product.name %>">
+                                </div></a>
+                                <div class="product-body">
+                                    <p class="product-category"><%= product.category %></p>
+                                    <h3 class="product-name">
+                                        <%= product.name %> <%= product.specs %>
+                                    </h3>
+                                    <h4 class="product-price">
+                                        $<%= Number(product.price).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                        <% if (product.discount > 0) { %>
+                                            <del class="product-old-price">
+                                                $<%= Number(product.price / (1 - product.discount / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                            </del>
+                                        <% } %>
+                                    </h4>
+                                </div>
+                            </div>
+                        <% } %>
+                    </div>
+
+                    <% if (topSelling.length >= 9) { %>
+                    <div>
+                        <% for(let i = 9; i < Math.min(12, topSelling.length); i++) { %>
+                            <% const product = topSelling[i]; %>
+                            <div class="product-widget">
+                                 <a href="/product/<%= product.id %>">
+                                <div class="product-img">
+                                    <img src="<%= product.image %>" alt="<%= product.name %>">
+                                </div></a>
+                                <div class="product-body">
+                                    <p class="product-category"><%= product.category %></p>
+                                    <h3 class="product-name">
+                                        <%= product.name %> <%= product.specs %>
+                                    </h3>
+                                    <h4 class="product-price">
+                                        $<%= Number(product.price).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                        <% if (product.discount > 0) { %>
+                                            <del class="product-old-price">
+                                                $<%= Number(product.price / (1 - product.discount / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                            </del>
+                                        <% } %>
+                                    </h4>
+                                </div>
+                            </div>
+                        <% } %>
+                    </div>
+                    <% } %>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-xs-6">
+                <div class="section-title">
+                    <h4 class="title">Los Más Vendidos</h4>
+                    <div class="section-nav">
+                        <div id="slick-nav-5" class="products-slick-nav"></div>
+                    </div>
+                </div>
+
+                <div class="products-widget-slick" data-nav="#slick-nav-5">
+                    <div>
+                        <% for(let i = 12; i < Math.min(15, topSelling.length); i++) { %>
+                            <% const product = topSelling[i]; %>
+                            <div class="product-widget">
+                                 <a href="/product/<%= product.id %>">
+                                <div class="product-img">
+                                    <img src="<%= product.image %>" alt="<%= product.name %>">
+                                </div></a>
+                                <div class="product-body">
+                                    <p class="product-category"><%= product.category %></p>
+                                    <h3 class="product-name">
+                                        <%= product.name %> <%= product.specs %>
+                                    </h3>
+                                    <h4 class="product-price">
+                                        $<%= Number(product.price).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                        <% if (product.discount > 0) { %>
+                                            <del class="product-old-price">
+                                                $<%= Number(product.price / (1 - product.discount / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                            </del>
+                                        <% } %>
+                                    </h4>
+                                </div>
+                            </div>
+                        <% } %>
+                    </div>
+
+                    <% if (topSelling.length >= 15) { %>
+                    <div>
+                        <% for(let i = 15; i < Math.min(18, topSelling.length); i++) { %>
+                            <% const product = topSelling[i]; %>
+                            <div class="product-widget">
+                                 <a href="/product/<%= product.id %>">
+                                <div class="product-img">
+                                    <img src="<%= product.image %>" alt="<%= product.name %>">
+                                </div></a>
+                                <div class="product-body">
+                                    <p class="product-category"><%= product.category %></p>
+                                    <h3 class="product-name">
+                                        <%= product.name %> <%= product.specs %>
+                                    </h3>
+                                    <h4 class="product-price">
+                                        $<%= Number(product.price).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                        <% if (product.discount > 0) { %>
+                                            <del class="product-old-price">
+                                                $<%= Number(product.price / (1 - product.discount / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+                                            </del>
+                                        <% } %>
+                                    </h4>
+                                </div>
+                            </div>
+                        <% } %>
+                    </div>
+                    <% } %>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /SECTION -->
+
 <!-- Section -->
 <div class="section">
     <div class="container">
