--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -112,8 +112,7 @@
 						data-variantId="<%= product.variantId %>"
 						data-color="<%= product.color %>"
 						data-ram="<%= product.ram %>"
-						data-storage="<%= product.storage %>"
-						data-stock="<%= product.stock %>"
+						data-specs="<%= product.specs %>"
 						data-name="<%= product.name %>"
 						data-price="<%= product.price %>"
 						data-tax="<%= product.tax %>"
