--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -128,8 +128,40 @@
 					</div>
 				</div>
 				<!-- /aside Widget -->
+
+				<!-- aside Widget -->
+				<div class="aside">
+				<h3 class="aside-title">Los Más Vendidos</h3>
+				<% if (topSelling?.length) { %>
+					<% topSelling.forEach(product => { %>
+					<div class="product-widget">
+						<a href="/product/<%= product.id %>">
+						<div class="product-img">
+						<img src="<%= product.image %>"
+							alt="<%= product.name %>">
+						</div>
+						<div class="product-body">
+						<p class="product-category"><%= product.category %></p>
+						<h3 class="product-name">
+							<%= product.name %> <%= product.specs %>
+						</h3>
+						<h4 class="product-price">
+							$<%= Number(product.price).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+							<% if (product.discount > 0) { %>
+								<del class="product-old-price">
+									$<%= Number(product.price / (1 - product.discount / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %>
+								</del>
+							<% } %>
+							</h4></a>
+						</div>
+					</div>
+					<% }) %>
+				<% } else { %>
+					<p>No hay productos destacados.</p>
+				<% } %>
+				</div>
+				<!-- /aside Widget -->
 			</div>
-			<!-- /ASIDE -->
 			
 			<!-- STORE -->
 			<div id="store" class="col-md-9">
