--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -141,6 +141,7 @@
         <script src="/js/store/libs/nouislider.min.js"></script>
         <script src="/js/store/libs/main.js" type="module"></script>
         <script src="/js/store/search.js"></script>
+        <script src="/js/store/cart/cartSync.js" type="module"></script>
         <script src="/js/store/cart/deleteProduct.js" type="module"></script>
         <script src="/js/store/cart/cartPreview.js" type="module"></script>
         <script src="/js/store/fav/fav.js" type="module"></script>
