--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -233,10 +233,10 @@
 															<div class="rating-tooltip"></div>
 															</div>
 															<div class="product-btns">
-																<button class="add-to-wishlist" 
-																	data-product-id="<%= product.id %>" 
-																	data-product-color="<%= product.color %>">
-																	<i class="fa-regular fa-heart"></i>
+																	<button class="add-to-wishlist" 
+																		data-product-id="<%= product.id %>" 
+																		data-variant-id="<%= product.variantId %>">
+																	<i class="fa-regular fa-heart"></i>  
 																	<span class="tooltipp">Favoritos</span>
 																</button>
 																	<% if (product.itsMobile) { %>
