--- a/public/css/libs/style.css
+++ b/public/css/libs/style.css
@@ -717,7 +717,7 @@ textarea.input {
 .cart-dropdown .cart-list .product-widget .product-img {
   width: 70px;
   height: 70px;
-  margin-left: 10%;  
+  margin-left: 0%;  
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1239,27 +1239,23 @@ textarea.input {
 }
 
 .product-widget+.product-widget {
-  margin: 40px 0px;
+  margin: 30px 0px;
 }
 
 .product-widget .product-img {
   position: absolute;
-  left: -10px;
-  top: 10px;
-  width: 70px;
+  left: 0px;
+  top: 0px;
+  width: 60px;
 }
 
 .product-widget .product-img>img {
-  object-fit: cover;
-  display: block;
   width: 100%;
-  height: 80px;
-  margin: 0 auto;
 }
 
 .product-widget .product-body {
-  padding-left: 110px;
-  min-height: 65px;
+  padding-left: 75px;
+  min-height: 60px;
 }
 
 .product-widget .product-body .product-category {
@@ -1268,12 +1264,12 @@ textarea.input {
   color: #8D99AE;
 }
 
-.product-widget .product-body .product-name, .product-color {
+.product-widget .product-body .product-name {
   text-transform: uppercase;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .product-widget .product-body .product-name>a {
@@ -1290,13 +1286,12 @@ textarea.input {
 }
 
 .product-widget .product-body .product-price .product-old-price {
-  font-size: 70%;
+  font-size: 80%;
   font-weight: 400;
   color: #8D99AE;
 }
 
-.product-widget .product-body .product-price .qty-fav,
-.product-widget .product-body .product-price .qty-cart {
+.product-widget .product-body .product-price .qty {
   font-weight: 400;
   margin-right: 10px;
 }
@@ -1305,10 +1300,10 @@ textarea.input {
   position: absolute;
   top: 0;
   left: 0;
-  height: 20px;
-  width: 20px;
+  height: 16px;
+  width: 16px;
   text-align: center;
-  font-size: 10px;
+  font-size: 12px;
   padding: 0;
   background: #1e1f29;
   border: none;
