--- a/src/views/store/orders/orderDetails.ejs
+++ b/src/views/store/orders/orderDetails.ejs
@@ -77,7 +77,7 @@
                     <% order.items.forEach(item => { %>
                         <tr>
                             <td><%= item.productName %> <%= item.specs %></td>
-                            <td><%= item.selectedColor %></td>
+                            <td><%= item.selectedColor?.toUpperCase() || '' %></td>
                             <td><%= item.quantity %></td>
                             <td>$<%= Number(item.unitPrice).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
                             <td>$<%= (item.unitPrice * item.quantity * (item.tax / 100)).toFixed(2).replace(/\B(?=(\d{3})+(?!\d))/g, ",") %></td>
