--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -88,8 +88,8 @@
                         <div class="footer">
                             <h3 class="footer-title">Servicios</h3>
                             <ul class="footer-links">
-                                <li><a href="/cart">Ver Carrito</a></li>
-                                <li><a href="/fav">Favoritos</a></li>
+                                <li><a href="/api/cart">Ver Carrito</a></li>
+                                <li><a href="/api/fav">Favoritos</a></li>
                                 <li><a href="/account">Mi Cuenta</a></li>
                                 <li><a href="/api/order/showOrders">Mis Pedidos</a></li>
                             </ul>
