--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -117,7 +117,7 @@
                     <div class="header-ctn">
                         <!-- Wishlist -->
                         <div>
-                            <a href="/fav" id="fav-count">
+                            <a href="/api/fav" id="fav-count">
                                 <i class="fa-regular fa-heart"></i>
                                 <span>Tus Favoritos</span>
                                 <div class="qty-fav" id="wishlist-count">0</div>
@@ -141,7 +141,7 @@
                                     <h5 id="cart-subtotal">SUBTOTAL: $0.00</h5>
                                 </div>
                                 <div class="cart-btns">
-                                    <a href="/cart">Ver Carrito</a>
+                                    <a href="/api/cart">Ver Carrito</a>
                                     <a href="/order">Procesar Pago <i class="fa fa-arrow-circle-right"></i></a>
                                 </div>
                             </div>
