--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -96,6 +96,9 @@
 								<option value="<%= i %>"><%= i %></option>
 							<% } %>
 							</select>
+							 <span id="outOfStockLabel" class="badge bg-danger"
+							 style="display:none;">
+							AGOTADO
 						</div>
 					</div>
 					<br><br>
